--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,26 +26,9 @@
   --y-scroll-on-load: 10rem;
 }
 
-a,
-body,
-button,
-div,
-ul,
-li,
-section,
-header,
-nav,
-h1,
-h2,
-h3,
-h4,
-h4::before,
-h5,
-p,
-img,
-span,
-svg,
-use {
+*,
+*::after,
+*::before {
   padding: 0;
   margin: 0;
   box-sizing: inherit;
@@ -54,12 +37,21 @@ use {
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  @include respond-tabLand {
+    font-size: 59%;
+  }
+  @include respond-tabPort {
+    font-size: 55%;
+  }
+  @include respond-phone {
+    font-size: 50%;
+  }
 }
 
 body {
   background-color: var(--color-light-grey-2);
   font-size: 1.6rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.3;
   color: var(--color-text-primary);
 }
