--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -146,16 +146,36 @@
 }
 
 .features {
-  max-width: 70rem;
+  max-width: 80rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: var(--margin-medium);
   row-gap: var(--margin-large);
 
+  @include respond-phone {
+    grid-template-columns: 1fr;
+    gap: 0;
+    padding: 0 2rem;
+    & img[data-newsrc="./img/grow.jpg"] {
+      grid-row: 3/4;
+      grid-column: 1/2;
+    }
+  }
+
   &__feature {
+    display: grid;
+    grid-template-columns: 1fr;
     width: 75%;
     justify-self: center;
+    @include respond-phone {
+      width: 100%;
+      grid-template-columns: 1fr 5fr;
+      &:not(:last-child) {
+        margin-bottom: 4rem;
+      }
+      margin-top: 1rem;
+    }
   }
 
   &__img {
@@ -168,14 +188,16 @@
   }
 
   &__icon {
-    width: 2.4rem;
-    height: 2.4rem;
+    width: 4rem;
+    height: 4rem;
     overflow: hidden;
     text-align: start;
     background-color: var(--color-dark-grey-3);
-    padding: 2rem;
+    padding: 0.75rem;
     border-radius: 50%;
     margin-bottom: var(--margin-small);
+    grid-column: 1/2;
+    grid-row: 1 / span 2;
 
     svg {
       width: 100%;
@@ -199,11 +221,20 @@
   border-radius: var(--radius-border);
   padding: 3rem 4rem 6rem 4rem;
 
+  @include respond-phone {
+    padding: 3rem 2rem 6rem 2rem;
+    max-width: 100%;
+    margin: 0 2rem;
+  }
+
   &__tabs {
     display: flex;
     justify-content: center;
     transform: translateY(-5rem);
-    // transform: translateY(-1.5rem);
+
+    @include respond-phone {
+      justify-content: space-around;
+    }
   }
 
   &__tab {
@@ -212,8 +243,13 @@
     color: #333;
     text-align: center;
     cursor: pointer;
-    flex-basis: 20%;
+    // flex-basis: 20%;
+    // flex: 1;
     transition: all 0.4s;
+
+    @include respond-phone {
+      flex: 1;
+    }
 
     &:not(:last-child) {
       margin-right: 2rem;
@@ -249,9 +285,9 @@
   &__icon {
     grid-row: 1 / span 2;
     grid-column: 1/2;
-    width: 3rem;
-    height: 3rem;
-    padding: 1rem;
+    width: 4rem;
+    height: 4rem;
+    padding: 0.75rem;
     background-color: var(--color-dark-grey-3);
     border-radius: 50%;
     svg {
@@ -277,6 +313,11 @@
   height: 36rem;
   overflow-x: hidden;
 
+  @include respond-phone {
+    width: 100%;
+    height: 52rem;
+  }
+
   &__slider {
     position: absolute;
     top: 0;
@@ -293,6 +334,9 @@
     &--3 {
       transform: translateX(200%);
     }
+    @include respond-phone {
+      padding: 0, 10%;
+    }
   }
 }
 
@@ -301,10 +345,11 @@
   justify-content: center;
 
   .dot {
-    height: 1.4rem;
-    width: 1.4rem;
+    height: 0.75rem;
+    width: 0.75rem;
+    border: 1px solid var(--color-dark-grey-1);
     border-radius: 50%;
-    background-color: var(--color-dark-grey-3);
+    background-color: transparent;
     cursor: pointer;
     transition: all 0.5s;
 
@@ -321,7 +366,7 @@
   line-height: 1.7;
   position: relative;
   &::before {
-    content: '\201D';
+    content: "\201D";
     position: absolute;
     top: -6rem;
     left: -4rem;
@@ -336,6 +381,7 @@
   }
   &__text {
     margin-bottom: var(--margin-medium);
+    text-overflow: ellipsis;
   }
   &__author {
     display: grid;
@@ -389,6 +435,10 @@
   background-color: var(--color-dark-grey-1);
   text-align: center;
 
+  hr {
+    border-color: var(--color-dark-grey-2);
+  }
+
   &__header {
     width: 75%;
     margin: 0 auto;
@@ -415,6 +465,7 @@
   &__nav-links {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     list-style: none;
   }
@@ -432,7 +483,7 @@
   }
 
   &__nav-link::after {
-    content: '';
+    content: "";
     display: block;
     background-color: var(--color-primary-light);
     width: 0;
