--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -11,20 +11,31 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  min-height: 100vh;
+  min-height: 95vh;
+
   .navigation-bar {
+    position: relative;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: var(--padding-outer);
     background-color: rgba(#cfcdcd, 0.95);
+
+    @include respond-phone {
+      column-gap: 1;
+      padding: 1rem;
+    }
+
     &__logo-box {
       width: 15rem;
+      @include respond-phone {
+        flex: 1;
+      }
     }
 
     &__logo {
-      width: 100%;
+      width: 15rem;
       cursor: pointer;
     }
 
@@ -36,6 +47,24 @@
       align-items: center;
       min-width: 0;
 
+      @include respond-phone {
+        position: absolute;
+        flex-direction: column;
+        justify-content: center;
+        background-image: linear-gradient(
+          to right bottom,
+          var(--color-primary-light),
+          var(--color-primary-dark)
+        );
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        right: -100%;
+        z-index: 9999;
+        transition: all 0.5s;
+        // display: none;
+      }
+
       //if the browsers js is intentionally turned off hover will be shown
       //but if not off e.preventDefault() will do the trick while implementing...
       //...onMouseOver & onMouseOut events
@@ -46,6 +75,14 @@
 
     &__link-item {
       margin-right: 2rem;
+
+      @include respond-phone {
+        margin-right: 0;
+        display: inline-block;
+        &:not(:last-child) {
+          margin-bottom: 2rem;
+        }
+      }
     }
 
     &__link {
@@ -54,6 +91,63 @@
       transition: all 0.6s;
       text-transform: capitalize;
       font-size: inherit;
+
+      @include respond-phone {
+        display: inline-block;
+        font-size: 4rem;
+        padding: 2rem;
+        background-color: var(--color-secondary);
+        border-radius: 1rem;
+      }
+    }
+
+    &__menu-icon {
+      position: relative;
+      width: 2rem;
+      height: 2px;
+      background-color: var(--color-dark-grey-1);
+      margin-left: 2rem;
+      display: none;
+      z-index: 99999;
+      cursor: pointer;
+      transition: color 0.3s;
+
+      @include respond-phone {
+        display: inline-block;
+      }
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        background-color: var(--color-dark-grey-1);
+        width: 100%;
+        height: 100%;
+        left: 0;
+        transition: color 0.5s, transform 0.5s;
+      }
+
+      &::before {
+        top: -4px;
+      }
+      &::after {
+        top: 4px;
+      }
+    }
+    &__menu-icon.rotate {
+      background-color: transparent;
+      transform: scale(1.2);
+    }
+    &__menu-icon.rotate::before {
+      background-color: white;
+      transform: rotate(45deg);
+      top: 0;
+    }
+
+    &__menu-icon.rotate::after {
+      background-color: white;
+      transform: rotate(135deg);
+      top: 0;
     }
   }
 
@@ -75,6 +169,10 @@
     justify-content: space-between;
     align-content: space-around;
     row-gap: 4rem;
+    @include respond-phone {
+      grid-template-columns: 1fr;
+      align-content: center;
+    }
   }
 
   &__hero-img {
@@ -82,6 +180,9 @@
     grid-column: 2 / 3;
     grid-row: 1 / span 3;
     justify-self: center;
+    @include respond-phone {
+      display: none;
+    }
   }
 
   &__main-title {
@@ -101,7 +202,7 @@
   padding: 0 1rem;
   display: inline-block;
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -123,6 +224,11 @@
   transform: translateY(var(--y-scroll-on-load));
   opacity: 0;
   transition: all 0.5s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  @include respond-phone {
+    padding: 7rem 0;
+  }
 }
 
 #section1 {
@@ -131,7 +237,7 @@
 
 hr {
   border: none;
-  border-bottom: 4px dotted var(--color-dark-grey-3);
-  width: 20rem;
+  border-bottom: 1px solid var(--color-light-grey-3);
+  width: 95%;
   margin: 0 auto;
 }
