--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -56,7 +56,7 @@
           var(--color-primary-light),
           var(--color-primary-dark)
         );
-        width: 100%;
+        width: 0;
         height: 100vh;
         top: 0;
         right: -100%;
